--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
 			display: flex;
 		}
 
+		#right2 {
+			float: right;
+			width: 50%;
+			height: 100vh;
+			background-color: #444;
+			align-items: center;
+			justify-content: center;
+			display: flex;
+		}
+
 		a {
 			color: white;
 			text-decoration: none;
@@ -51,6 +61,10 @@
 
 	<a id="right" href="v2/index.html">
 		Version 2
+	</a>
+
+	<a id="right2" href="v2/index.html">
+		Version 3
 	</a>
 </body>
 </html>
