Enhance layout and add version links in index.html and index.css

--- a/v3/index.html
+++ b/v3/index.html
@@ -43,6 +43,12 @@
       <button class="btn equals" onclick="calculateResult()">=</button>
     </div>
   </div>
+
+  <div class="versions">
+    <a class="v" href="https://steellgoldstock.github.io/tc-uha-calculatrice/v3/index.html">Version 3 (Actuelle)</a>
+    <a class="v" href="https://steellgoldstock.github.io/tc-uha-calculatrice/v2/index.html">Version 2</a>
+    <a class="v" href="https://steellgoldstock.github.io/tc-uha-calculatrice/v1/index.html">Version 1</a>
+  </div>
   
   <script src="index.js"></script>
 </body>
